# CMakeDemo

./: .gitignore  README.md
boost/src/: CMakeLists.txt
cross/: rebuild-local.sh  rebuild-macos-aarch64.sh  rebuild-macos-x86_64.sh  rebuild-ubuntu20_04-aarch64.sh  rebuild-ubuntu20_04-x86_64.sh  rebuild-windows-x64.sh  rebuild-windows-x86.sh
cross/MacSign/: README.md
cross/py/: README.md  package_from_installed.py  package_from_installed_2026.py  vs_2022_install.bat
cross/src/: CMakeLists.txt
cross/toolchain/: clang.cmake  macos-aarch64.cmake  macos-x86_64.cmake  ubuntu20_04-x86_64.cmake  windows-x64.cmake  windows-x86.cmake
demo10-1/: CMakeLists.txt  rebuild.sh
demo10-1/test/: CMakeLists.txt
demo10-2/: CMakeLists.txt  rebuild.bat
demo10-2/info/: CMakeLists.txt
demo11-1/src/: CMakeLists.txt  info.cpp  info.h
demo11-2/src/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  fibonacci_posix.cpp  fibonacci_windows.cpp  main.cpp
demo12-1/src/: CMakeLists.txt  info.cpp  info.h
demo12-2/src/: CMakeLists.txt  fibonacci.h  fibonacci_posix.cpp  fibonacci_windows.cpp  main.cpp
demo13-1/: CMakeLists.txt
demo13-1/fibonacci/: info.h
demo13-2/: CMakeLists.txt  rebuild.sh
demo13-2/fibonacci/: CMakeLists.txt  info.cpp
demo13-2/test/: CMakeLists.txt  main.cpp
demo13-2/version/: CMakeLists.txt  resource.rc.in  version.cpp  version.h.in
demo14-1/: CMakeLists.txt
demo14-1/include/: info.h
demo14-1/test/: CMakeLists.txt
demo14-2/: CMakeLists.txt  rebuild.bat  rebuild.sh
demo14-2/info/: CMakeLists.txt
demo14-2/info/include/: info.h
demo14-2/info/lib/MacOS/arm64/: libinfo.dylib
demo14-2/info/lib/MacOS/x86_64/: libinfo.dylib
demo14-2/info/lib/Windows/Win32/: info.lib
demo14-2/info/lib/Windows/x64/: info.lib
demo14-2/test/: CMakeLists.txt
demo15-1/: rebuild.sh
demo15-1/src/: CMakeLists.txt
demo15-2/src/: test.cpp
demo16-1/: rebuild.bat
demo16-1/src/: CMakeLists.txt  trans.h
demo16-2/: rebuild.bat
demo16-2/src/: CMakeLists.txt  trans.cpp
demo17/src/: CMakeLists.txt  main.cpp
demo18-1/src/: CMakeLists.txt
demo18-2/src/: CMakeLists.txt
demo18-3/src/: CMakeLists.txt
demo18-4/src/: CMakeLists.txt
demo19-1/src/: CMakeLists.txt
demo19-2/src/: CMakeLists.txt
demo2/: rebuild.sh
demo2/src/: CMakeLists.txt  main.cpp  name.cpp  name.h
demo20/: rebuild_static.bat
demo20-1/: CMakeLists.txt  rebuild.sh
demo20-1/info/: CMakeLists.txt  info.h
demo20-1/test/: CMakeLists.txt  main.cpp
demo20-1/wrapper/: CMakeLists.txt  wrapper.h
demo20-2/: CMakeLists.txt  export_decorated.h.in  rebuild.sh
demo20-2/info/: CMakeLists.txt  info.h
demo20-2/test/: CMakeLists.txt
demo20-2/wrapper/: CMakeLists.txt  wrapper.h
demo21/: CMakeLists.txt  rebuild_static.sh
demo21-1/: CMakeLists.txt  rebuild.sh
demo21-1/include/: export_decorated.h
demo21-1/info/: info.cpp
demo21-1/test/: main.cpp
demo21-1/wrapper/: CMakeLists.txt  wrapper.cpp
demo21-2/: CMakeLists.txt
demo21-2/info/: CMakeLists.txt
demo21-2/test/: CMakeLists.txt
demo21-2/wrapper/: CMakeLists.txt
demo21/include/: export_decorated.h
demo21/info/: CMakeLists.txt  info.h
demo21/src/: export_decorated.h.in
demo21/test/: CMakeLists.txt
demo21/wrapper/: CMakeLists.txt  wrapper.h
demo22-1/: CMakeLists.txt
demo22-1/info/: CMakeLists.txt  info.cpp  init_posix.cpp  init_unix.cpp  init_windows.cpp
demo22-1/info/include/: info.h
demo22-1/test/: CMakeLists.txt  main.cpp
demo22-2/: CMakeLists.txt  rebuild.bat
demo22-2/info/: info.cpp  info_inner.h
demo22-2/test/: CMakeLists.txt  main.cpp  util.cpp  util.h  util_posix.cpp  util_windows.cpp
demo22/src/: CMakeLists.txt
demo22/src/module1/: CMakeLists.txt  impl.cpp
demo22/src/module2/: CMakeLists.txt
demo23/src/: CMakeLists.txt
demo25/: rebuild-local.sh
demo25/src/: CMakeLists.txt
demo25/toolchain/: ubuntu20_04-aarch64.cmake  ubuntu20_04-x86_64.cmake
demo26/: rebuild-macos-aarch64.sh  rebuild-macos-x86_64.sh
demo26-1/: rebuild-macos-x86_64.sh
demo26-1/src/: CMakeLists.txt
demo26-1/toolchain/: macos-aarch64.cmake
demo26-2/: rebuild-local.sh  rebuild-macos-aarch64.sh  rebuild-macos-x86_64.sh
demo26-2/precompile/: MainMenu.nib  build_xib.sh
demo26-2/src/: AppDelegate.m  CMakeLists.txt  info.plist  mycontent.txt
demo26-2/toolchain/: local-xcode.cmake  macos-x86_64.cmake
demo26/src/: CMakeLists.txt  main.cpp
demo27/: rebuild-windows-arm64.sh  rebuild-windows-x64.sh  rebuild-windows-x86.sh
demo27/src/: CMakeLists.txt  resource.h  resource.rc  win_main.cpp
demo27/toolchain/: windows-arm86-clang19.cmake  windows-arm86.cmake  windows-x64-clang19.cmake  windows-x64.cmake  windows-x86-clang19.cmake  windows-x86.cmake
demo28/: rebuild-ubuntu20_04-x86_64.sh
demo28/src/: CMakeLists.txt  Test.gresource.xml  main.cpp
demo28/toolchain/: clang.cmake  ubuntu20_04-aarch64.cmake  ubuntu20_04-x86_64.cmake
demo29/: rebuild-ubuntu20_04-aarch64.sh
demo29/src/: CMakeLists.txt
demo3/: rebuild.bat  rebuild.sh
demo3/src/: CMakeLists.txt  main.cpp  number.cpp  number.h
demo30/: rebuild-ubuntu22_04-aarch64.sh  rebuild-ubuntu22_04-x86_64.sh
demo30/src/: CMakeLists.txt  main.cpp
demo30/toolchain/: ubuntu20_04-aarch64.cmake  ubuntu20_04-x86_64.cmake  ubuntu22_04-aarch64.cmake  ubuntu22_04-x86_64.cmake
demo31-1/src/: CMakeLists.txt
demo31-2/src/: CMakeLists.txt
demo31-3/src/: CMakeLists.txt  main.cpp
demo32/src/: CMakeLists.txt  (+1 more)
demo33-1/: rebuild.sh
demo33-2/: rebuild.sh
demo33-3/: rebuild.bat
demo33-4/: rebuild.sh
demo34-1/: rebuild.bat  rebuild.sh
demo34-2/: rebuild.bat  rebuild.sh
demo34-test/: FibonacciCalc-1.0.0-Linux.deb  rebuild.bat  rebuild.sh
demo35/: test.bat  test.sh
demo4/: rebuild.sh
demo5-1/: rebuild.sh
demo5-2/: rebuild.bat  rebuild.sh
demo6-2/: rebuild.sh
demo7/: rebuild_shared.bat  rebuild_shared.sh  rebuild_static.bat  rebuild_static.sh
demo8-2/: CMakeLists.txt
demo9-1/: CMakeLists.txt  rebuild.bat
demo9-2/: CMakeLists.txt  rebuild.bat
sdk/: pack_sdk.sh  pack_sdk_legacy.sh  readme.md  rebuild.sh
test/: rebuild.bat  rebuild.sh
(+106 files in other folders)
